fix second section mobile

--- a/inc/assets/sass/responsive.scss
+++ b/inc/assets/sass/responsive.scss
@@ -710,7 +710,7 @@
 				top: -17%;
 			}
 			.hover-cat-bottom {
-				top: 102%;
+				top: 102% !important;
 			}
 		}
 		.article-container.hovered{
